3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

Added regions support for plugins. Affected files:
 include/plugin.h sproto.h
 server/plugins.c
--
Added regions to Python plugin. Affected files:
 cfpython/include/cfpython.h cfpython_map_private.h
 cfpython/cfpython.c cfpython_map.c cfpython_region.c Makefile.am Makefile.in
New files:
 cfpython/include/cfpython_region.h cfpython_region_private.h
 cfpython/cfpython_region.c
--
In Python's Object, Archetype is now a property and not a method. Affected files:
 cfpython/include/cfpython_object_private.h
 cfpython/cfpython_object.c
--
Cleaned obsolete include/plugproto.h. 
Ryo 2006-01-07

Make teleporters hidden below the floor work again.
--
server/time.c: In move_teleporter() use object above floor instead above
   teleporter to operate one.
Andreas Kirschbaum 2006-01-07

Fix issues with map tiling.
--
server/move.c: In move_ob() make sure inserting multi-part objects into tiled
   maps work.
server/spell_attack.c: In cast_cone() insert spell effect at correct position
   for tiled maps.
Andreas Kirschbaum 2006-01-07

common/map.c: Allow map tiling paths to be reletive.
server/main.c: Template maps: Impliment using fixed maps as templates, and
  improve reletive path support for them.
Alex Schultz 2006-01-06

Make SIGNs (including Magic Mouths) trigger for DMs again. Does not reduce the
counter if in 'wizpass mode.
--
server/apply.c: In apply_sign() ignore DMs.
Andreas Kirschbaum 2006-01-04

server/spell_effect.c: Apply patch 1394861 - fixes magic walls.  In conjuction
  with archetype changes, look at the spell object (and not created wall)
  to see if it blocks.